changed the wrong font sizes...putting it back and fixing the right ones

--- a/pixelandcode/css/main.css
+++ b/pixelandcode/css/main.css
@@ -79,6 +79,7 @@ section > img {
   margin-bottom: 5px;
 }
 
+/***** TYPOGRAPHY *****/
 .middle-align { align-items: anchor-center; }
 .middle-align > h2,
 .middle-align > h3 { margin: 13px; }
@@ -87,45 +88,30 @@ section > img {
   font-family: 'Press Start 2P', monospace;
   vertical-align: middle;
   font-size: 1rem;
-  @media screen and (max-width: 1440px) {
-    font-size: 0.8rem;
-  }
-  @media screen and (max-width: 1024px) {
-    font-size: 0.6rem;
-  }
-  @media screen and (max-width: 425px) {
-    font-size: 0.4rem;
-  }
+  @media screen and (max-width: 1440px) { font-size: 0.8rem; }
+  @media screen and (max-width: 1024px) { font-size: 0.7rem; }
+  @media screen and (max-width: 425px) { font-size: 0.6rem;}
 }
 .monospace-font {
   font-family: 'Courier New', monospace;
   font-size: 1.5rem;   
-  @media screen and (max-width: 1440px) {
-    font-size: 1.3rem;
-  }
-  @media screen and (max-width: 1024px) {
-    font-size: 1.1rem;
-  }
-  @media screen and (max-width: 425px) {
-    font-size: 0.9rem;
-  }
+  @media screen and (max-width: 1440px) { font-size: 1.3rem; }
+  @media screen and (max-width: 1024px) { font-size: 1.1rem; }
+  @media screen and (max-width: 425px) { font-size: 0.9rem; }
 }
+/***** -end- TYPOGRAPHY *****/
 
+
+/***** HOMEPAGE ANIMATED LOGO *****/
 .logo {
   color: #0F0F0F;
 }
 .pixel {
   font-family: 'Press Start 2P', monospace;
   font-size: 8rem;
-  @media screen and (max-width: 1440px) {
-    font-size: 8rem;
-  }
-  @media screen and (max-width: 1024px) {
-    font-size: 7em;
-  }
-  @media screen and (max-width: 425px) {
-    font-size: 6em;
-  }
+  @media screen and (max-width: 1440px) { font-size: 6rem; }
+  @media screen and (max-width: 1024px) { font-size: 4em; }
+  @media screen and (max-width: 425px) { font-size: 2em; }
   display: inline-block;
   opacity: 0;
   animation: pixelFadeIn 0.5s steps(12) forwards;
@@ -163,3 +149,4 @@ section > img {
   white-space: nowrap;
   overflow: hidden;
 }
+/***** -end- HOMEPAGE ANIMATED LOGO *****/
